--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,4 @@ util_spectral_scan/util_spectral_scan
 util_spi_stress/util_spi_stress
 util_tx_continuous/util_tx_continuous
 util_tx_test/util_tx_test
-
+util_lbt_test/util_lbt_test
